<resources>
    <string name="app_name">Conversion Calculator</string>
    <string name="enter_text">Enter value:</string>
    <string name="input_editText">Input number</string>
    <string name="from_text">Convert from:</string>
    <string name="unit_spinner">Conversion</string>
    <string name="convert_button">Convert unit</string>
    <string name="output_text">The converted value is:</string>
    <string name="outputValue_text">0</string>
    <string name="clear_button">Clear</string>

    <string-array name="unit_array">
        <item>km to mi</item>
        <item>mi to km</item>
        <item>cm to in</item>
        <item>in to cm</item>
        <item>kg to lb</item>
        <item>lb to kg</item>
        <item>g to oz</item>
        <item>oz to g</item>
        <item>l to cups</item>
        <item>cup to l</item>
    </string-array>
</resources>